# vtr-verilog-to-routing

./: CMakeLists.txt  install_apt_packages.sh  requirements.txt
.github/scripts/: hostsetup.sh
ODIN_II/: dt.py  test_file.vh
ODIN_II/SRC/: BLIFElaborate.cpp  BlockMemories.cpp  HardSoftLogicMixer.cpp  MixingOptimization.cpp  adders.cpp  ast_elaborate.cpp  ast_loop_unroll.cpp  default_out.blif  ga_partial_map.cpp  memories.cpp  multipliers.cpp  netlist_check.cpp  netlist_cleanup.cpp  netlist_create_from_ast.cpp  netlist_statistic.cpp  netlist_utils.cpp  odin_ii.cpp  parse_making_ast.cpp  partial_map.cpp  read_xml_config_file.cpp  registered_ga_items.cpp
ODIN_II/SRC/include/: HardSoftLogicMixer.hpp  MixingOptimization.hpp  adders.h  ast_loop_unroll.h  config_t.h  ga_partial_map.h  netlist_statistic.h  netlist_utils.h  odin_types.h  registered_ga_items.h
dev/: subtree_config.xml  test_git_bisect.sh
dev/odin2_helper/: Makefile
doc/src/: index.rst
doc/src/odin/: quickstart.md
doc/src/parmys/: index.rst
doc/src/quickstart/: index.rst
doc/src/vtr/: run_vtr_flow.rst
doc/src/yosys/: quickstart.rst
harpreets_task/config/: config.txt  custom_odin_config.xml
libs/librtlnumber/: main.cpp
ml_inference/python_scripts/: dt.py
model/: assign_stmt.yaml  function.yaml  logic_var.yaml  prim_term.yaml
odin_ii/: CMakeLists.txt
odin_ii/usefull_tools/: nuke_temporary_files.sh
parmys/: README.md  dt.py
parmys/parmys-plugin/: fileio.cc  fileio.h  parmys.cc
synthesis_task/config/: config.txt  multconfig.xml
test_task/config/: config.txt  multconfig.xml  run_this_script_to_verify_correctness.sh
verilog_preprocessor/: Makefile
vtr_flow/misc/: custom_odin_config_no_mults.xml
vtr_flow/scripts/: run_vtr_flow.py
yosys/: CMakeLists.txt
(+160 files in other folders)
